feat: add Supabase middleware and client utilities
- Implemented middleware for session management using Supabase in middleware.ts.
- Created a browser client for Supabase in utils/supabase/client.ts.
- Developed a server client for Supabase with environment variable checks in utils/supabase/server.ts.

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,11 @@
 ANTHROPIC_API_KEY=replace-me
-DATABASE_URL=postgresql://postgres:postgres@localhost:5432/hoosgottime
+
+# Supabase project keys
+NEXT_PUBLIC_SUPABASE_URL=https://your-project.supabase.co
+NEXT_PUBLIC_SUPABASE_ANON_KEY=public-anon-key
+# Optional – used for server actions or cron jobs that need elevated access
+SUPABASE_SERVICE_ROLE_KEY=service-role-key
+
+# Prisma connection strings (use Supabase pool + direct URLs)
+DATABASE_URL="postgresql://postgres.your-project:your-password@aws-1-your-region.pooler.supabase.com:6543/postgres?sslmode=require&pgbouncer=true&connection_limit=1"
+DIRECT_URL="postgresql://postgres.your-project:your-password@aws-1-your-region.pooler.supabase.com:5432/postgres?sslmode=require"
