--- a/package.json
+++ b/package.json
@@ -17,6 +17,9 @@
     "@anthropic-ai/sdk": "^0.19.0",
   "@prisma/client": "^5.18.0",
   "@radix-ui/react-slot": "^1.0.3",
+  "@supabase/auth-helpers-nextjs": "^0.10.0",
+    "@supabase/ssr": "^0.5.2",
+    "@supabase/supabase-js": "^2.45.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.0",
     "date-fns": "^3.6.0",
@@ -24,8 +27,8 @@
     "next": "^14.2.5",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-  "tailwind-merge": "^2.2.1",
-  "tailwindcss-animate": "^1.0.7",
+    "tailwind-merge": "^2.2.1",
+    "tailwindcss-animate": "^1.0.7",
     "zod": "^3.23.8"
   },
   "devDependencies": {
