--- a/package.json
+++ b/package.json
@@ -9,8 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@anthropic-ai/sdk": "^0.69.0",
+    "@supabase/supabase-js": "^2.81.1",
+    "bcryptjs": "^3.0.3",
+    "better-sqlite3": "^11.10.0",
+    "date-fns": "^4.1.0",
+    "googleapis": "^131.0.0",
     "next": "^13.4.0",
     "react": "18.2.0",
+    "react-big-calendar": "^1.19.4",
     "react-dom": "18.2.0"
   }
 }
